# doffin-mcp

./: .dockerignore  AGENT_INSTRUCTIONS.md  DOCKER.md  Dockerfile  GETTING_STARTED.md  LICENSE  QUICK_START.md  README.md  deploy-docker.sh  docker-claude-config.json.example  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: test.yml
docs/: mcp-best-practices.md
examples/: README.md  basic-server.py  robust-client.py
mcp-doffin/: Makefile  README.md  doffin.json.example  mcp_doffin.py  pyproject.toml  requirements.txt  test_requirements.txt
tests/: README.md  conftest.py  test_e2e.py  test_integration.py  test_unit.py
